# spycy

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  index.html  lint.sh  matcher.py  pattern_graph.py  pypher.py  pyproject.toml  requirements.txt  setup_gen.sh  version  visitor.py
.github/workflows/: deploy.yml  tck.yml
examples/: README.md  query_ldbc_with_spycy.py  spycy_dom.py  spycy_llvm.py
functions/: __init__.py  aggregation_fns.py  list_fns.py  logarithmic_fns.py  numeric_fns.py  predicate_fns.py  scalar_fns.py  string_fns.py  trignometric_fns.py
pypher/: __init__.py  __main__.py  matcher.py  pattern_graph.py  pypher.py
pypher/functions/: list_fns.py  logarithmic_fns.py  numeric_fns.py  predicate_fns.py  scalar_fns.py  string_fns.py  trignometric_fns.py
scripts/: build_deps.sh  setup_gen.sh
spycy/: __init__.py  __main__.py  dfsmatcher.py  expression_evaluator.py  graph.py  matcher.py  pattern_graph.py  spycy.py  types.py
spycy/functions/: __init__.py  aggregation_fns.py  list_fns.py  logarithmic_fns.py  numeric_fns.py  predicate_fns.py  scalar_fns.py  string_fns.py  trignometric_fns.py
static/: script.js  style.css
test/: expected_failures.txt  openCypher
test/features/: environment.py  expressions
test/features/steps/: steps.py
test/tck/: .gitignore  README.md  expected_failures.txt  openCypher  run_tck.py
test/tck/features/: clauses  environment.py  useCases
test/tck/features/steps/: steps.py
