[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypher_aneeshdurg"
version = "0.0.1"
authors = [
  { name="Aneesh Durg", email="aneeshdurg17@gmail.com" },
]
description = "openCypher implemented in python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aneeshdurg/pypher"
"Bug Tracker" = "https://github.com/aneeshdurg/pypher/issues"


[tool.pyright]
exclude = ["**/__pycache__"]
pythonVersion = "3.9"
pythonPlatform = "Linux"

[tool.isort]
profile = "black"
